--- a/src/static-pages/styles/reviewer-guide.scss
+++ b/src/static-pages/styles/reviewer-guide.scss
@@ -4,8 +4,8 @@
     flex-direction: column;
     @include forSize('tabletPortraitUp') {
         flex-direction: unset;
-        justify-content: center;
         grid-area: main;
+        width: 100%;
     }
     h1 {
         margin-top: 0;
